--- a/src/components/CTASection/CTASection.scss
+++ b/src/components/CTASection/CTASection.scss
@@ -44,6 +44,13 @@
 .cta-content {
     flex: 1;
 
+    @include mobile {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .cta-title {
         font-size: 2.5rem;
         font-weight: 700;
