--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -22,6 +22,11 @@
     &__column {
         display: flex;
         flex-direction: column;
+        
+        @include mobile {
+            align-items: center;
+            text-align: center;
+        }
 
         h4 {
             font-size: 1rem;
@@ -54,6 +59,10 @@
                 align-items: center;
                 gap: 0.625rem;
                 margin-bottom: $spacing-md;
+                
+                @include mobile {
+                    justify-content: center;
+                }
 
                 .logo-icon {
                     width: 1.875rem;
